Colaboratory를 통해 생성됨

--- a/Colaboratory에_오신_것을_환영합니다.ipynb
+++ b/Colaboratory에_오신_것을_환영합니다.ipynb
@@ -45,156 +45,39 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "FVjGtJQadGOS",
+        "id": "48idfr8XeIpo",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "\"\"\"\n",
-        "asdfsdafsa\n",
-        "\"\"\"\n",
-        "from collections import defaultdict\n",
-        "from torch.distributions import Categorical\n",
-        "import torch.optim as optim\n",
-        "import torch\n",
-        "import wandb\n",
+        "import torch.nn.functional as F\n",
+        "import torch.nn as nn\n",
         "\n",
-        "from model import Policy, Value\n",
+        "class Policy(nn.Module):\n",
+        "    def __init__(self, hidden_dim):\n",
+        "        super().__init__()\n",
+        "        self.linear1 = nn.Linear(4, hidden_dim)\n",
+        "        self.linear2 = nn.Linear(hidden_dim, 2)\n",
         "\n",
-        "class Agent:\n",
-        "    def __init__(self,\n",
-        "        env,\n",
-        "        actor_hidden_dim,\n",
-        "        critic_hidden_dim,\n",
-        "        actor_lr,\n",
-        "        critic_lr,\n",
-        "        print_every\n",
-        "        ):\n",
-        "        \"\"\"\n",
-        "        Cute Class\n",
-        "        \"\"\"\n",
-        "        self.actor = Policy(actor_hidden_dim)\n",
-        "        self.critic = Value(critic_hidden_dim)\n",
+        "    def forward(self, x):\n",
+        "        x = self.linear1(x)\n",
+        "        x = F.relu(x)\n",
+        "        x = self.linear2(x)\n",
+        "        x = F.softmax(x, dim=1)\n",
         "\n",
-        "        self.optimizer_actor = optim.Adam(self.actor.parameters(), lr=actor_lr)\n",
-        "        self.optimizer_critic = optim.Adam(self.critic.parameters(), lr=critic_lr)\n",
+        "        return x\n",
         "\n",
-        "        self.discount_factor = 0.99\n",
+        "class Value(nn.Module):\n",
+        "    def __init__(self, hidden_dim):\n",
+        "        super().__init__()\n",
+        "        self.linear1 = nn.Linear(4, hidden_dim)\n",
+        "        self.linear2 = nn.Linear(hidden_dim, 1)\n",
         "\n",
-        "        self.env = env\n",
-        "\n",
-        "        self.print_every = print_every\n",
-        "\n",
-        "\n",
-        "    def put_data(self,\n",
-        "        state,\n",
-        "        action,\n",
-        "        reward,\n",
-        "        next_state,\n",
-        "        done):\n",
-        "\n",
-        "        self.data['states'].append(state)\n",
-        "        self.data['actions'].append(action)\n",
-        "        self.data['rewards'].append(reward)\n",
-        "        self.data['next_states'].append(next_state)\n",
-        "        self.data['dones'].append(done)\n",
-        "\n",
-        "    def clear_data(self):\n",
-        "        self.data = defaultdict(list)\n",
-        "\n",
-        "    def interact(self):\n",
-        "        state = self.env.reset()\n",
-        "        done = False\n",
-        "\n",
-        "        while not done:\n",
-        "            action_distribution =\\\n",
-        "                self.actor(torch.tensor(state, dtype=torch.float32).unsqueeze(0))\n",
-        "            action = Categorical(action_distribution).sample().item()\n",
-        "            next_state, reward, done, _ = self.env.step(action)\n",
-        "\n",
-        "            self.put_data(state,\n",
-        "                          action,\n",
-        "                          reward,\n",
-        "                          next_state,\n",
-        "                          done * 1.)\n",
-        "\n",
-        "        return len(self.data['rewards'])\n",
-        "\n",
-        "    def to_tensor(self):\n",
-        "        self.data['states'] =\\\n",
-        "            torch.tensor(self.data['states'], dtype=torch.float32)\n",
-        "        self.data['actions'] =\\\n",
-        "            torch.tensor(self.data['actions'], dtype=torch.long).view(-1, 1)\n",
-        "        self.data['rewards'] =\\\n",
-        "            torch.tensor(self.data['rewards'], dtype=torch.float32).view(-1, 1)\n",
-        "        self.data['next_states'] =\\\n",
-        "            torch.tensor(self.data['next_states'], dtype=torch.float32)\n",
-        "        self.data['dones'] =\\\n",
-        "            torch.tensor(self.data['dones'], dtype=torch.float32).view(-1, 1)\n",
-        "\n",
-        "    def actor_step(self):\n",
-        "        with torch.no_grad():\n",
-        "            advantage = self.discount_factor*self.critic(self.data['next_states'])*\\\n",
-        "                            (1-self.data['dones']) +\\\n",
-        "                            self.data['rewards'] - self.critic(self.data['states'])\n",
-        "\n",
-        "        likelihoods = self.actor(self.data['states']).gather(1, self.data['actions'])\n",
-        "        loss_actor = -torch.log(likelihoods) * advantage\n",
-        "\n",
-        "        self.optimizer_actor.zero_grad()\n",
-        "        loss_actor.mean().backward()\n",
-        "        self.optimizer_actor.step()\n",
-        "\n",
-        "        return loss_actor.mean().item()\n",
-        "\n",
-        "    def critic_step(self):\n",
-        "        with torch.no_grad():\n",
-        "            target = self.discount_factor*self.critic(self.data['next_states'])*\\\n",
-        "                            (1-self.data['dones']) +\\\n",
-        "                            self.data['rewards']\n",
-        "\n",
-        "        loss_critic = (target - self.critic(self.data['states'])).abs()\n",
-        "\n",
-        "        self.optimizer_critic.zero_grad()\n",
-        "        loss_critic.mean().backward()\n",
-        "        self.optimizer_critic.step()\n",
-        "\n",
-        "        return loss_critic.mean().item()\n",
-        "\n",
-        "    def train(self, iterations):\n",
-        "        running_episode_length = 0\n",
-        "        running_critic_loss = 0\n",
-        "        running_actor_loss = 0\n",
-        "        for i in range(1, iterations+1):\n",
-        "            self.clear_data()\n",
-        "            episode_length = self.interact()\n",
-        "            self.to_tensor()\n",
-        "            critic_loss = self.critic_step()\n",
-        "            actor_loss = self.actor_step()\n",
-        "\n",
-        "            running_episode_length += episode_length\n",
-        "            running_critic_loss += critic_loss\n",
-        "            running_actor_loss += actor_loss\n",
-        "\n",
-        "            if i % self.print_every == 0:\n",
-        "                wandb.log({\n",
-        "                    'Episode Length' : running_episode_length/self.print_every,\n",
-        "                    'Actor Loss' : running_actor_loss/self.print_every,\n",
-        "                    'Critic Loss' :  running_critic_loss/self.print_every\n",
-        "                })\n",
-        "                running_episode_length = 0\n",
-        "                running_critic_loss = 0\n",
-        "                running_actor_loss = 0\n",
-        "\n",
-        "\n",
-        "\n",
-        "    def save(self):\n",
-        "        torch.save(self.actor.state_dict(), 'actor.pth')\n",
-        "        torch.save(self.critic.state_dict(), 'critic.pth')\n",
-        "\n",
-        "    def load(self):\n",
-        "        self.actor.load_state_dict(torch.load('actor.pth'))\n",
-        "        self.critic.load_state_dict(torch.load('critic.pth'))\n"
+        "    def forward(self, x):\n",
+        "        x = self.linear1(x)\n",
+        "        x = F.relu(x)\n",
+        "        x = self.linear2(x)\n",
+        "        return x\n"
       ],
       "execution_count": 0,
       "outputs": []
