--- a/Welcome_To_Colaboratory.ipynb
+++ b/Welcome_To_Colaboratory.ipynb
@@ -26,50 +26,23 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "6uCgbZMDOOZk",
-        "colab_type": "text"
-      },
-      "source": [
-        ""
-      ]
-    },
-    {
       "cell_type": "code",
       "metadata": {
-        "id": "H1Fo18O8OOqq",
+        "id": "cEaahE95EH8f",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "lU_7MwQdOOwF",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "import torch.nn.functional as F\n",
         "import torch.nn as nn\n",
-        "\n",
-        "class Q(nn.Module):\n",
-        "    def __init__(self, hidden_dim):\n",
-        "        super().__init__()\n",
-        "        self.linear1 = nn.Linear(4, hidden_dim)\n",
-        "        self.linear2 = nn.Linear(hidden_dim, 2)\n",
-        "\n",
-        "    def forward(self, x):\n",
-        "        x = self.linear1(x)\n",
-        "        x = F.relu(x)\n",
-        "        x = self.linear2(x)\n",
-        "        return x"
+        "import torch.nn.functional as F\n",
+        "class Critic(nn.Module):\n",
+        "      def __init__(self):\n",
+        "          suprt().__init__()\n",
+        "          self.linear1 = nn.Linear(30*2, 150)\n",
+        "          self.linear2 = nn.Linear(150, 150)\n",
+        "          self.linear3 = nn.Linear(30*2, 150)\n",
+        "          self.linear4 = nn.Linear(30*2, 150)\n",
+        "          "
       ],
       "execution_count": 0,
       "outputs": []
